# rs-quick-gfx

./: Cargo.toml
examples/: bounce.rs  square.rs  text.rs  texture.rs
src/: lib.rs  test_helper.rs  vec.rs
src/renderer/: controller.rs  mod.rs  shader.rs
src/res/: mod.rs
src/res/font/: glium_cache.rs  mod.rs
src/res/tex/: glium_cache.rs  mod.rs
src/res/tex/glium_cache/: binary_tree.rs  mod.rs
